--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,16 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Preprint server for the International Directed Evolution Competition"
     />
+    <meta property="og:title" content="idecRχiv" />
+    <meta property="og:url" content="https://idecRxiv.idec.io/" />
+    <meta property="og:image" content="https://idecRxiv.idec.io/idecRxiv-og-img.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="Preprints on directed evolution, for a competition" />
+    <meta property="og:site_name" content="idecRχiv" />
+    <meta name="twitter:image:alt" content="Preprints on directed evolution, for a competition" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     
     <!-- Material UI -->
@@ -32,7 +40,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>idecRχiv</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
