Update og metatags

--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,12 @@
       content="Preprint server for the International Directed Evolution Competition"
     />
     <meta property="og:title" content="idecRχiv" />
-    <meta property="og:url" content="https://idecRxiv.idec.io/" />
-    <meta property="og:image" content="https://idecRxiv.idec.io/idecRxiv-og-img.png" />
+    <meta property="og:url" content="https://arxiv.idec.io/" />
+    <meta property="og:image" content="https://arxiv.idec.io/idecRxiv-og-img.png" />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="Preprints on directed evolution, for a competition" />
+    <meta property="og:description" content="Preprints on biological competitions, for a biology competition" />
     <meta property="og:site_name" content="idecRχiv" />
-    <meta name="twitter:image:alt" content="Preprints on directed evolution, for a competition" />
+    <meta name="twitter:image:alt" content="Preprints on biological competitions, for a biology competition" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     
