Update metadata tags for http only status

--- a/public/index.html
+++ b/public/index.html
@@ -7,14 +7,20 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Preprint server for the International Directed Evolution Competition"
+      content="Preprint server for the International Directed Evolution Competition (iDEC)"
     />
     <meta property="og:title" content="idecRχiv" />
-    <meta property="og:url" content="https://arxiv.idec.io/" />
-    <meta property="og:image" content="https://arxiv.idec.io/idecRxiv-og-img.png" />
+    <meta property="og:url" content="http://arxiv.idec.io/" />
+    <meta property="og:image" content="http://arxiv.idec.io/idecRxiv-og-img.png" />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="Preprints on biological competitions, for a biology competition" />
+    <meta property="og:description" content="Preprint server for the International Directed Evolution Competition (iDEC)" />
     <meta property="og:site_name" content="idecRχiv" />
+
+    <meta name="twitter:title" content="idecRχiv" />
+    <meta name="twitter:description" content="Preprint server for the International Directed Evolution Competition (iDEC)" />
+    <meta name="twitter:image" content="http://arxiv.idec.io/idecRxiv-og-img.png" />
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@iDEC2021">
     <meta name="twitter:image:alt" content="Preprints on biological competitions, for a biology competition" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
